# CC_Paper_researcher

./: .env.example  .gitignore  CLAUDE.md  README.md  config.yaml  exclude.yaml  main.py  pyproject.toml  research_profile.example.md
.claude/skills/paper-analyzer/: SKILL.md  cover-prompt.md
.claude/skills/paper-analyzer/styles/: academic.md  concise.md  storytelling.md  with-code.md  with-formulas.md
deploy/: install_systemd.sh  paper-reader-bot.service  paper-reader.service  paper-reader.timer
docs/: CoachMe-改善方向與模型地圖.md  EXPERIMENT_LOG.md  MotionXperts-開發筆記整理.md
paper-reader/: .gitignore  CLAUDE.md  already_read_sources.md  config.yaml  exclude.yaml  main.py
paper-reader/deploy/: install_systemd.sh  paper-reader.service
paper-reader/prompts/: extract.md  reader.md  screener.md
paper-reader/src/: config.py  runner.py
paper-reader/src/output/: notion.py  render.py
paper-reader/src/pipeline/: discovery.py  orchestrator.py  publish.py  reader.py  review.py
paper-reader/src/store/: queue.py
prompts/: extract.md  ranker.md  reader.md  review.md  screener.md
src/: agent.py  config.py  runner.py
src/output/: discord.py  discord_bot.py  notion.py  report_parse.py  text.py
src/pipeline/: enrich.py  orchestrator.py  publish.py  ranker.py  reader.py  review.py  scholar.py  screener.py
src/store/: queue.py  usage.py
