[project]
name = "paper-reader"
version = "0.1.0"
description = "每晚自動論文閱讀系統（Claude Agent SDK + Skills）"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "claude-agent-sdk>=0.2.95",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "feedparser>=6.0.12",
    "pymupdf>=1.24.0",
    "latex2mathml>=3.77.0",
    "opencc>=1.3.1",
    "playwright>=1.60.0",
    "beautifulsoup4>=4.15.0",
]

[tool.uv]
package = false
